force-app/main/default/objects/sbaa__ApprovalSnapshot__c/sbaa__ApprovalSnapshot__c.object-meta.xml
<CustomObject>
    <label>Approval Snapshot</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Approval Snapshot #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>