force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__ApprovalCondition__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Condition that the value is captured from</description>
        <inlineHelpText>Approval Condition that the value is captured from</inlineHelpText>
        <label>Approval Condition</label>
        <referenceTo>sbaa__ApprovalCondition__c</referenceTo>
        <relationshipLabel>Approval Snapshots</relationshipLabel>
        <relationshipName>ApprovalSnapshot2</relationshipName>
        <type>Lookup</type>
    </CustomField>