force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__ApprovedValueLongText__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovedValueLongText__c</fullName>
        <description>Long Text that is captured</description>
        <inlineHelpText>Long Text that is captured</inlineHelpText>
        <label>Approved Value (Long Text)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>