force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__ApprovedValueNumeric__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovedValueNumeric__c</fullName>
        <description>Numeric Value that is captured</description>
        <inlineHelpText>Numeric Value that is captured</inlineHelpText>
        <label>Approved Value (Numeric)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>