force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__ApprovedValueText__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovedValueText__c</fullName>
        <description>Text Value that is captured</description>
        <inlineHelpText>Text Value that is captured</inlineHelpText>
        <label>Approved Value (Text)</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>